# Конфигурационный файл проекта

# Настройки проекта
[tool.poetry]

name = "Тестовое"  # Название проекта
version = "0.1.0"  # Версия проекта
description = "Решение задании НТ Performance Lab"
authors = ["Timur <lutf@inbox.ru>"]
readme = "README.md"


[tool.pydocstyle]
convention = "google"


# Секция инструмента для форматирования кода (Black)
[tool.black]
line-length = 100  # Максимальная длина строки кода после форматирования
target-version = ["py312"]  # Версия Python, для которой форматируется код
include = '\.py$|\.ipynb$'  # Регулярное выражение, определяющее, какие файлы подвергаются форматированию
skip-string-normalization = false # сохранять использование одинарных кавычек, если возможно
skip-magic-trailing-comma =  true #  добавлять волшебную запятую 




exclude = '''       # Регулярное выражение для исключения файлов из форматирования
(
  /(
      \.eggs         # исключить несколько общих каталогов в корне проекта
    | \.git          # исключить каталоги, не требующие форматирования
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | _build
    | postgres_data
    | buck-out
    | build
    | dist
  )/
)
'''

# параметры для инструмента isort, который используется для автоматической сортировки импортов в Python-файлах.
[tool.isort]
multi_line_output = 3  # Определяет, как isort будет оформлять многострочные импорты.
include_trailing_comma = true  # Определяет, следует ли добавлять запятую после последнего импорта в строке.
force_grid_wrap = 0  # Определяет, должны ли импорты, выходящие за пределы максимальной длины строки, быть оформлены в столбцах или в строку.
use_parentheses = true  # Определяет, следует ли оборачивать многострочные импорты в круглые скобки.
ensure_newline_before_comments = true  # Определяет, следует ли вставлять пустую строку перед комментариями в импортах.
line_length = 100  # Максимальная длина строки для форматирования.


# указывает на зависимости, необходимые для работы самого проекта
[tool.poetry.dependencies]
python = "^3.12"


# зависимости, которые необходимы только во время разработки и тестирования проекта.
[tool.poetry.dev-dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
flake8-bugbear = "^24.1.17"
